// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css_macro pick css 1`] = `
""use strict";

const ButtonStyle = "styled-d078a2d0";

// class: GlobalButton
const ButtonStyle2 = "GlobalButton";

// Global style

const obj = {
  y: "styled-37422008"
};
obj.x = "styled-8fe9c9a3";
function Hi() {
  const ButtonStyle = "styled-e9cdcd6a";
}"
`;

exports[`css_macro pick css 2`] = `
".styled-d078a2d0 {
                color: #000;
            }
.GlobalButton {
                color: #000;
            }

                .Group {
                    flow-children: right;
                }
            
.styled-37422008 {y: 0px;}
.styled-8fe9c9a3 {
                x: 0px;
            }
.styled-e9cdcd6a {
                    color: #000;
                }
"
`;

exports[`css_macro pick css 3`] = `
{
  "css_macro.test.ts": ".styled-d078a2d0 {
                color: #000;
            }
.GlobalButton {
                color: #000;
            }

                .Group {
                    flow-children: right;
                }
            
.styled-37422008 {y: 0px;}
.styled-8fe9c9a3 {
                x: 0px;
            }
.styled-e9cdcd6a {
                    color: #000;
                }
",
}
`;
